--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,6 +10,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.7.3"
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "reflect-metadata": "^0.2.2"
   }
 }
